// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index table clear cache button works from context menu 1`] = `"clearing cache..."`;

exports[`index table clear cache button works from context menu 2`] = `"open"`;

exports[`index table close index button works from context menu 1`] = `"closing..."`;

exports[`index table close index button works from context menu 2`] = `"closed"`;

exports[`index table edit index button works from context menu 1`] = `"Edit settings"`;

exports[`index table flush button works from context menu 1`] = `"flushing..."`;

exports[`index table flush button works from context menu 2`] = `"open"`;

exports[`index table force merge button works from context menu 1`] = `"open"`;

exports[`index table force merge button works from context menu 2`] = `"forcing merge..."`;

exports[`index table force merge button works from context menu 3`] = `"open"`;

exports[`index table open index button works from context menu 1`] = `"opening..."`;

exports[`index table open index button works from context menu 2`] = `"open"`;

exports[`index table refresh button works from context menu 1`] = `"refreshing..."`;

exports[`index table refresh button works from context menu 2`] = `"open"`;

exports[`index table should change pages when a pagination link is clicked on 1`] = `
Array [
  "testy0",
  ".admin0",
  "testy1",
  "testy2",
  ".admin2",
  "testy3",
  "testy4",
  ".admin4",
  "testy5",
  ".admin5",
]
`;

exports[`index table should change pages when a pagination link is clicked on 2`] = `
Array [
  "testy6",
  ".admin6",
  "testy7",
  ".admin7",
  "testy8",
  ".admin8",
  "testy9",
  ".admin9",
  "testy10",
  ".admin10",
]
`;

exports[`index table should filter based on content of search input 1`] = `
Array [
  "testy0",
]
`;

exports[`index table should show hidden indices only when the switch is turned on 1`] = `
Array [
  "testy0",
  ".admin0",
  "testy1",
  "testy2",
  ".admin2",
  "testy3",
  "testy4",
  ".admin4",
  "testy5",
  ".admin5",
]
`;

exports[`index table should show hidden indices only when the switch is turned on 2`] = `
Array [
  "testy0",
  ".admin0",
  "testy1",
  ".admin1",
  "testy2",
  ".admin2",
  "testy3",
  ".admin3",
  "testy4",
  ".admin4",
]
`;

exports[`index table should show the right context menu options when more than one closed index is selected 1`] = `
Array [
  "Open indices",
  "Delete indices",
]
`;

exports[`index table should show the right context menu options when more than one open index is selected 1`] = `
Array [
  "Close indices",
  "Force merge indices",
  "Refresh indices",
  "Clear indices cache",
  "Flush indices",
  "Delete indices",
]
`;

exports[`index table should show the right context menu options when one index is selected and closed 1`] = `
Array [
  "Show index settings",
  "Show index mapping",
  "Edit index settings",
  "Open index",
  "Delete index",
]
`;

exports[`index table should show the right context menu options when one index is selected and open 1`] = `
Array [
  "Show index settings",
  "Show index mapping",
  "Show index stats",
  "Edit index settings",
  "Close index",
  "Force merge index",
  "Refresh index",
  "Clear index cache",
  "Flush index",
  "Delete index",
]
`;

exports[`index table should show the right context menu options when one open and one closed index is selected 1`] = `
Array [
  "Open indices",
  "Delete indices",
]
`;

exports[`index table should sort when header is clicked 1`] = `
Array [
  ".admin0",
  ".admin10",
  ".admin100",
  ".admin101",
  ".admin102",
  ".admin103",
  ".admin104",
  ".admin11",
  ".admin12",
  ".admin13",
]
`;

exports[`index table should sort when header is clicked 2`] = `
Array [
  "testy99",
  "testy98",
  "testy97",
  "testy96",
  "testy95",
  "testy94",
  "testy93",
  "testy92",
  "testy91",
  "testy90",
]
`;

exports[`index table show mappings button works from context menu 1`] = `"Mappings"`;

exports[`index table show settings button works from context menu 1`] = `"Settings"`;

exports[`index table show stats button works from context menu 1`] = `"Stats"`;
